Fix simple link text button alignment

--- a/scss/elements/_buttons.scss
+++ b/scss/elements/_buttons.scss
@@ -136,6 +136,7 @@ button {
         padding: 10px 0 6px 0;
         color: $matisse;
         background-color: transparent;
+        text-align: left;
 
         &:hover {
             text-decoration: underline;
